fix: padding and gap on left-sidebar

--- a/src/components/SideBar/styles.css
+++ b/src/components/SideBar/styles.css
@@ -12,6 +12,10 @@ aside {
 
 }
 
+.left-sidebar {
+    gap: unset;
+    padding: 20px 0;
+}
 
 .menu-top {
     display: flex;
